Оформлена карточка с каналом

--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
     <header class="header">
       <div class="container">
         <h1>Счетчик для Youtube-канала</h1>
-        <p><span id="count">0</span> подписчиков</p>
+        
+        <div class="row justify-content-center">
+          <div class="col-10">
+            <div class="card">
+              <img class="card-img-top" id="img-channel" src="#" alt="Аватарка канала">
+              <div class="card-body">
+                <h5 class="card-title" id="name-channel">Название канала</h5>
+                <p class="card-text" id="description-channel">Развернутое описание канала</p>
+                <a href="#" class="btn btn-primary"><span id="count">0</span> подписчиков</a>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
