--- a/index.html
+++ b/index.html
@@ -19,15 +19,24 @@
         <h1>Счетчик для Youtube-канала</h1>
         
         <div class="row justify-content-center">
-          <div class="col-10">
+          <div class="col-8">
             <div class="card">
               <img class="card-img-top" id="img-channel" src="#" alt="Аватарка канала">
               <div class="card-body">
-                <h5 class="card-title" id="name-channel">Название канала</h5>
+                <h5 class="card-title" id="title-channel">Название канала</h5>
                 <p class="card-text" id="description-channel">Развернутое описание канала</p>
                 <a href="#" class="btn btn-primary"><span id="count">0</span> подписчиков</a>
               </div>
             </div>
+          </div>
+          <div class="col-4">
+            <form class="form-inline" id="form" action="#">
+              <div class="form-group mx-sm-3 mb-2">
+                <label for="name-channel" class="sr-only">Поиск канала</label>
+                <input type="text" autocomplete="off" class="form-control" id="name-channel" placeholder="Название канала">
+              </div>
+              <button type="submit" class="btn btn-primary mb-2">Поиск</button>
+            </form>
           </div>
         </div>
       </div>
